Rework file handling + fix crash when lasertag config folder does not exist